--- a/package.json
+++ b/package.json
@@ -12,8 +12,18 @@
     "babel-core": "^6.26.0",
     "babel-preset-latest": "^6.24.1",
     "babel-register": "^6.26.0",
+    "del": "^3.0.0",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^4.1.0",
+    "gulp-cache": "^1.0.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-imagemin": "^4.1.0",
+    "gulp-jshint": "^2.1.0",
+    "gulp-livereload": "^3.8.1",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-notify": "^3.1.0",
     "gulp-rename": "^1.2.2",
+    "gulp-ruby-sass": "^3.0.0",
     "gulp-uglify": "^3.0.0"
   }
 }
