--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "gulp-rename": "^1.2.2",
     "gulp-ruby-sass": "^3.0.0",
     "gulp-uglify": "^3.0.0"
+  },
+  "dependencies": {
+    "eruda": "^1.4.0"
   }
 }
